--- a/.github/workflows/stats.yml
+++ b/.github/workflows/stats.yml
@@ -15,7 +15,9 @@ jobs:
     steps:
       - uses: lowlighter/metrics@latest
         with:
-          filename: metrics.plugin.isocalendar.svg
           token: ${{ secrets.METRICS_TOKEN }}
+          filename: metrics.plugin.isocalendar.svg
           base: ""
           plugin_isocalendar: yes
+          committer_branch: main
+          committer_message: "chore: update metrics"
