--- a/.github/workflows/stats.yml
+++ b/.github/workflows/stats.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
       - uses: lowlighter/metrics@latest
         with:
-          token: ${{ secrets.METRICS_TOKEN }}
+          token: ${{ secrets.METRIC_TOKEN }}
           filename: metrics.plugin.isocalendar.svg
           base: ""
           plugin_isocalendar: yes
