--- a/.github/workflows/stats.yml
+++ b/.github/workflows/stats.yml
@@ -17,3 +17,13 @@ jobs:
           filename: metrics.plugin.isocalendar.svg
           base: ""
           plugin_isocalendar: yes
+          name: Favorites characters
+      - uses: lowlighter/metrics@latest
+        with:
+          filename: metrics.plugin.anilist.characters.svg
+          token: NOT_NEEDED
+          base: ""
+          plugin_anilist: yes
+          plugin_anilist_sections: characters
+          plugin_anilist_limit_characters: 8
+
